2009-12-08  Peterson Trethewey  <petersont@google.com>

        Reviewed by Oliver Hunt.

        Implement WebGLUniformLocation and change API to use it.
        https://bugs.webkit.org/show_bug.cgi?id=31173

        * fast/canvas/webgl/resources/structUniformShader.vert: Added.
        * fast/canvas/webgl/script-tests/uniform-location.js: Added.
        * fast/canvas/webgl/uniform-location-expected.txt: Added.
        * fast/canvas/webgl/uniform-location.html: Added.

2009-12-08  Adam Langley  <agl@google.com>

        Reviewed by Darin Adler.

        Fix assertion failure in WebCore::RenderBlock::startDelayUpdateScrollInfo

        startDelayUpdateScrollInfo calls a function that can end up calling
        startDelayUpdateScrollInfo again. However, it's static state is
        inconsistent when this happens leading to an assertion failure (or
        probably a memory leak if assertions are off).

        Thanks to Robert Swiecki for the test case.

        https://bugs.webkit.org/show_bug.cgi?id=32172
        http://code.google.com/p/chromium/issues/detail?id=28880


        * fast/css/recursive-delay-update-scroll.html: Added.
        * fast/css/recursive-delay-update-scroll-expected.txt: Added.

2009-12-08  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Skip another failing media test, that I already mentioned in the bug report.

        * platform/mac-snowleopard/Skipped:

2009-12-08  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Navigating to a cached page can result in accessing a destroyed HTMLInputElement.
        <rdar://problem/6856662> and https://webkit.org/b/32293

        * fast/loader/input-element-page-cache-crash-expected.txt: Added.
        * fast/loader/input-element-page-cache-crash.html: Added.

2009-12-08  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Skip fast/repaint/block-selection-gap-in-table-cell.html (generates new result) to turn Qt/Gtk builds green again.
