@@ -1,0 +1,10 @@
+Test WebSocket handshake success without protocol and ignore WebSocket-Protocol from server.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+Connected
+PASS protocol is "sub-protocol"
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
